fix: highlight dark mode

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -73,6 +73,6 @@ mark {
 // Dark mode override
 [data-theme="dark"] {
   mark {
-    background-color: rgba($dark-text-link-secondary, 0.15);
+    background-color: rgba($dark-text-link-secondary, 0.25);
   }
 }
